2013-07-16  David Holsgrove <david.holsgrove@xilinx.com>

	* configure.host: Change to microblaze*.
	* libc/include/machine/ieeefp.h: Add __MICROBLAZEEL__.
	* libc/machine/microblaze/mb_endian.h: New file.
	* newlib/libc/machine/microblaze/strcmp.c: Add little endian support.
	* newlib/libc/machine/microblaze/strcpy.c: Likewise.
	* newlib/libc/machine/microblaze/strlen.c: Likewise.

2013-07-09  Sabrina Ni  <sabrina@andestech.com>

	* libc/machine/nds32/Makefile.am (lib_a_SOURCES): Add abort.c, memcpy.S,
	memset.S, strcmp.S, and strcpy.S.
	* libc/machine/nds32/Makefile.in: Regenerated.
	* libc/machine/nds32/{abort.c, memcpy.S, memset.S, strcmp.S, strcpy.S}:
	New.

2013-07-09  Sabrina Ni  <sabrina@andestech.com>

	* configure.host (machine_dir, syscall_dir, newlib_cflags):
	Add settings for nds32*.
	* libc/include/machine/ieeefp.h (IEEE_BIG_ENDIAN, IEEE_LITTLE_ENDIAN):
	Ditto.
	* libc/include/machine/setjmp.h (JBLEN): Ditto.
	* libc/machine/configure.in: Add nds32 subdir.
	* libc/machine/configure: Regenerated.
	* libc/machine/nds32/Makefile.am: New.
	* libc/machine/nds32/Makefile.in: New (autogenerated).
	* libc/machine/nds32/aclocal.m4: New (autogenerated).
	* libc/machine/nds32/configure.in: New.
	* libc/machine/nds32/configure: New (autogenerated).
	* libc/machine/nds32/setjmp.S: New.

2013-07-09  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/config.h (__DYNAMIC_REENT__): Define for RTEMS.

2013-07-09  Bin Cheng  <bin.cheng@arm.com>

	* libc/stdio/fwalk.c (_fwalk): Remove redundant test.

2013-07-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/types.h (u_char): Add redefinition guard.
	(u_short, u_int, u_long, caddr_t, daddr_t): Ditto.

2013-07-02  Joey Ye  <joey.ye@arm.com>

	Lite exit support.
	* README: Add information about lite-exit.
	* acconfig.h (_LITE_EXIT): New macro.
	* configure.in (enable-lite-exit): New option.
	(_LITE_EXIT): Define new macro.
	* configure: Regenerated.